--- a/filebrowser/templates/filebrowser/include/tableheader.html
+++ b/filebrowser/templates/filebrowser/include/tableheader.html
@@ -13,9 +13,9 @@
         {% if query.o == "filetype" %}
         <th scope="col" class="sortable sorted {{ query.ot }}ending">
             <div class="sortoptions">
-                <a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=filetype" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
+                <a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=filetype" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
             </div>
-            <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=filetype">{% trans "Type" %}</a></div>
+            <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=filetype">{% trans "Type" %}</a></div>
             <div class="clear"></div>
         </th>
         {% endif %}
@@ -34,9 +34,9 @@
         {% if query.o == "filename_lower" %}
         <th scope="col" class="sortable sorted {{ query.ot }}ending">
             <div class="sortoptions">
-                <a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=filename_lower" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
+                <a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=filename_lower" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
             </div>
-            <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=filename_lower">{% trans "Filename" %}</a></div>
+            <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=filename_lower">{% trans "Filename" %}</a></div>
             <div class="clear"></div>
         </th>{% endif %}
         {% if query.o != "filename_lower" %}
@@ -49,9 +49,9 @@
             {% if query.o == 'folder' %}
             <th scope="col" class="sortable sorted {{ query.ot }}ending">
                 <div class="sortoptions">
-                    <a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=folder" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
+                    <a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=folder" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
                 </div>
-                <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=folder">{% trans "Folder" %}</a></div>
+                <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=folder">{% trans "Folder" %}</a></div>
                 <div class="clear"></div>
             </th>
             {% endif %}
@@ -66,9 +66,9 @@
         {% if query.o == "filesize" %}
         <th scope="col" class="sortable sorted {{ query.ot }}ending">
             <div class="sortoptions">
-                <a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=filesize" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
+                <a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=filesize" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
             </div>
-            <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=filesize">{% trans "Size" %}</a></div>
+            <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=filesize">{% trans "Size" %}</a></div>
             <div class="clear"></div>
         </th>
         {% endif %}
@@ -82,9 +82,9 @@
         {% if query.o == "date" %}
         <th scope="col" class="sortable sorted {{ query.ot }}ending">
             <div class="sortoptions">
-                <a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=date" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
+                <a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=date" class="toggle {{ query.ot }}ending" title="{% trans "Toggle sorting" %}"></a>
             </div>
-            <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% ifequal query.ot "desc" %}asc{% else %}desc{% endifequal %}&amp;o=date">{% trans "Date" %}</a></div>
+            <div class="text"><a href="{% query_string "" "o,ot,p" %}&amp;ot={% if query.ot == "desc" %}asc{% else %}desc{% endif %}&amp;o=date">{% trans "Date" %}</a></div>
             <div class="clear"></div>
         </th>
         {% endif %}
