--- a/filebrowser/templates/filebrowser/index.html
+++ b/filebrowser/templates/filebrowser/index.html
@@ -15,23 +15,23 @@
     {{ block.super }}
     <script type="text/javascript" src="{% static_jquery %}"></script>
     <script type="text/javascript" src="{% static "admin/js/jquery.init.js" %}"></script>
-    {% ifequal query.pop '1' %} <!-- FileBrowseField -->
+    {% if query.pop == '1' %} <!-- FileBrowseField -->
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_FileBrowseField.js" %}"></script>
-    {% endifequal %}
-    {% ifequal query.pop '2' %} <!-- TinyMCE -->
+    {% endif %}
+    {% if query.pop == '2' %} <!-- TinyMCE -->
     <script language="javascript" type="text/javascript" src="{% static "tiny_mce/tiny_mce_popup.js" %}"></script>
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCE.js" %}"></script>
     {% if query.mce_rdomain %}<script language="javascript">document.domain = "{{ query.mce_rdomain }}"</script>{% endif %}
-    {% endifequal %}
-    {% ifequal query.pop '3' %} <!-- CKeditor (former "FCKeditor") -->
+    {% endif %}
+    {% if query.pop == '3' %} <!-- CKeditor (former "FCKeditor") -->
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_CKEditor.js" %}"></script>
-    {% endifequal %}
-    {% ifequal query.pop '4' %} <!-- TinyMCE -->
+    {% endif %}
+    {% if query.pop == '4' %} <!-- TinyMCE -->
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCEv4.js" %}"></script>
-    {% endifequal %}
-    {% ifequal query.pop '5' %} <!-- TinyMCE -->
+    {% endif %}
+    {% if query.pop == '5' %} <!-- TinyMCE -->
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCEv5.js" %}"></script>
-    {% endifequal %}
+    {% endif %}
     {{ media }}
     <script type="text/javascript" charset="utf-8">
         (function($) {
@@ -106,10 +106,12 @@
 
 <!-- CONTENT -->
 {% block content %}
-    <div id="content-main"{%if old_design %} class="old-design"{% endif %}>
+    <div id="content-main">
         <!-- POP-UP BREADCRUMBS -->
         {% if query.pop %}
+            <div class="breadcrumbs">
             {% include "filebrowser/include/breadcrumbs.html" %}
+            </div>
         {% endif %}
 
         <!-- OBJECT-TOOLS -->
@@ -121,6 +123,7 @@
         {% endblock %}
 
         <div class="module filtered" id="changelist">
+        <div class="changelist-form-container">
             <!-- SEARCH -->
             {% block search %}
                 <div id="toolbar"><form id="changelist-search" action="" method="get">
@@ -136,17 +139,13 @@
                 {% if query.type %}<input type="hidden" name="type" value="{{ query.type }}" />{% endif %}
                 {% if query.format %}<input type="hidden" name="format" value="{{ query.format }}" />{% endif %}
                 {% if query.dir %}<input type="hidden" name="dir" value="{{ query.dir|urlencode }}" />{% endif %}
-                {% ifequal query.pop '3' %} {# Custom CKEditor fields #}
+                {% if query.pop == '3' %} {# Custom CKEditor fields #}
                     {% if query.CKEditor %}<input type="hidden" name="CKEditor" value="{{ query.CKEditor }}" />{% endif %}
                     {% if query.CKEditorFuncNum %}<input type="hidden" name="CKEditorFuncNum" value="{{ query.CKEditorFuncNum }}" />{% endif %}
-                {% endifequal %}
+                {% endif %}
                 </div>
                 </form></div>
                 <script type="text/javascript">document.getElementById("searchbar").focus();</script>
-            {% endblock %}
-            {% block filters %}
-                <!-- FILTERS -->
-                {% include "filebrowser/include/filter.html" %}
             {% endblock %}
 
             <form id="changelist-form" action="" method="post">{% csrf_token %}
@@ -164,6 +163,11 @@
 
                 {% pagination %}
             </form>
+        </div>
+        {% block filters %}
+            <!-- FILTERS -->
+            {% include "filebrowser/include/filter.html" %}
+        {% endblock %}
         </div>
     </div>
 {% endblock %}
