--- a/filebrowser/templates/filebrowser/version.html
+++ b/filebrowser/templates/filebrowser/version.html
@@ -8,20 +8,20 @@
     {{ block.super }}
     <script type="text/javascript" src="{% static_jquery %}"></script>
     <script type="text/javascript" src="{% static "admin/js/jquery.init.js" %}"></script>
-    {% ifequal query.pop '1' %} <!-- FileBrowseField -->
+    {% if query.pop == '1' %} <!-- FileBrowseField -->
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_FileBrowseField.js" %}"></script>
-    {% endifequal %}
-    {% ifequal query.pop '2' %} <!-- TinyMCE -->
+    {% endif %}
+    {% if query.pop == '2' %} <!-- TinyMCE -->
     <script language="javascript" type="text/javascript" src="{% static "tiny_mce/tiny_mce_popup.js" %}"></script>
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCE.js" %}"></script>
     {% if query.mce_rdomain %}<script language="javascript">document.domain = "{{ query.mce_rdomain }}"</script>{% endif %}
-    {% endifequal %}
-    {% ifequal query.pop '4' %} <!-- TinyMCE -->
+    {% endif %}
+    {% if query.pop == '4' %} <!-- TinyMCE -->
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCEv4.js" %}"></script>
-    {% endifequal %}
-    {% ifequal query.pop '5' %} <!-- TinyMCE -->
+    {% endif %}
+    {% if query.pop == '5' %} <!-- TinyMCE -->
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCEv5.js" %}"></script>
-    {% endifequal %}
+    {% endif %}
 {% endblock %}
 
 <!-- CONTENT -->
@@ -29,7 +29,7 @@
     {% if fileobject.filetype == "Image" %}
         {% version fileobject.path settings_var.ADMIN_THUMBNAIL as thumbnail_version %}
         {% version fileobject.path query.version as image_version %}
-        {% ifequal query.pop '1' %} <!-- FileBrowseField -->
+        {% if query.pop == '1' %} <!-- FileBrowseField -->
         <script type="text/javascript" charset="utf-8">
             (function($) {
                 $(document).ready(function() {
@@ -37,7 +37,7 @@
                 });
             })(django.jQuery);
         </script>
-        {% endifequal %}
+        {% endif %}
         {% if query.pop == '2' or query.pop == '4' or query.pop == '5' %} <!-- TinyMCE -->
         <script type="text/javascript" charset="utf-8">
             (function($) {
