--- a/filebrowser/templates/filebrowser/createdir.html
+++ b/filebrowser/templates/filebrowser/createdir.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 <!-- COLTYPE/BODYCLASS -->
-{% block bodyclass %}change-form filebrowser{% if query.pop %} popup{% endif %}{% endblock %}
+{% block bodyclass %}{{ block.super }} change-form filebrowser{% if query.pop %} popup{% endif %}{% endblock %}
 {% block coltype %}colM{% endblock %}
 
 <!-- BREADCRUMBS -->
