--- a/filebrowser/templates/filebrowser/detail.html
+++ b/filebrowser/templates/filebrowser/detail.html
@@ -27,7 +27,7 @@
 {% endblock %}
 
 <!-- COLTYPE/BODYCLASS -->
-{% block bodyclass %}change-form filebrowser{% if query.pop %} popup{% endif %}{% endblock %}
+{% block bodyclass %}{{ block.super }} change-form filebrowser{% if query.pop %} popup{% endif %}{% endblock %}
 {% block coltype %}colM{% endblock %}
 
 <!-- BREADCRBUMBS -->
